# PMT-ShapeAnalysis

ReadRED/: CMakeLists.txt  ReadRED.ipynb  ReadRED.py  plot_3d_event.py  plot_short_maps.py  read_red.cxx  read_red.py  sndisplay.py  test.py
calomissioning/: CMakeLists.txt  calo_plotter.py  create_template.py  demonstrator_ap.py  event_builder.py  merge.c  plotter.py  read_red.cxx  read_rtd.cxx  rtd-merger.cxx  rtd_analysis.ipynb  rtd_tracker_commissioning.ipynb  rxd2root.cxx  rxd2root_calo_data.cxx  rxd2root_tracker_data.cxx  sndisplay.py  template_merge.C  tot_rtd_analysis.cxx  tracker_plotter.py
calomissioning/notebooks/: rtd_analysis.ipynb  rtd_tracker_commissioning.ipynb
commissioning/: CMakeLists.txt  av_pulse_comparison.py  create_template.py  demonstrator_ap.py  event_map.py  example_waveforms.py  pmt_shape_analysis.py  read_rtd.cxx  read_rtd_time_res.cpp  time_resolution.py
config_files/: calo_com_config_file.txt  pmt_permeation_config.conf  snemo_calo.conf
functions/: data_reader_functions.py  other_functions.py
pmt_he_study/: 1400V_analysis.py  MF_example.ipynb  create_template.py  format_plot.py  models.py  ntuple_reader.py  pmt_charge_analysis.cpp  pulse_fitter.ipynb  read_simulation.ipynb  simulation.ipynb  test.py  xml_reader.cpp  xml_reader.py
pmt_he_study/batch_scripts/: batch_xml_1000_reader.sh  batch_xml_1400_reader.sh
pmt_he_study/electron_xsec/: electron_double_xsections.csv  plot_xsec.py
pmt_he_study/notebooks/: check_files.ipynb  pulse_fitter.ipynb
pmt_he_study/simulation/: baseline.py  create_data.py  injection.py  read_data.py  simulation.ipynb
pmt_he_study/summary_files/: ap_aans.py  ap_charge.ipynb  ap_charges.py  ap_nums_dist.py  ap_times_dist.py  apulse_plotter.py  apulse_times.py  charge_ratio_plotter.py  convolution_plotter.py  electron_xsections.csv  fitter.py  gain_plotter.py  gamma_fitting.py  internal_pp.ipynb  internal_pp.py  modelling_book.ipynb  plot_xsec.py  plotter.ipynb  pulse_electrons.ipynb  res_plotter.py  resolution_plotter.ipynb  saturated_charge_dist.py
pmt_he_study/summary_files/notebooks/: ap_charge.ipynb  internal_pp.ipynb  plotter.ipynb
pmt_he_study/waveform_sims/: MatrixPlot.py  MigrationMatrixMaker.py  ModellingAndEfficiency.py  SmearRatioWithExposure.py  WaveformGen.conf  XML_waveform_gen.py  batch_xml_sim_reader.sh
src/: PMT_Array.py  PMT_Classes.py  PMT_Object.py  PMT_Waveform.py
